# src/shared/api/openapi.yaml
@@ -391,9 +391,7 @@ paths:
     get:
       tags:
         - Comments
-      summary: >-
-        Returns all comments created in discussion or by author with the
-        specified ID.
+      summary: Get comments by filters.
       parameters:
         - name: discussionId
           in: query
@@ -468,13 +466,58 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/CommentDto'
-  /api/v1/comments/{targetCommentId}:
+  /api/v1/comments/{parentCommentId}/replies:
+    get:
+      tags:
+        - Comments
+      summary: Get replies to the comment with the specified ID.
+      parameters:
+        - name: parentCommentId
+          in: path
+          required: true
+          style: simple
+          schema:
+            type: string
+            format: uuid
+        - name: page
+          in: query
+          required: true
+          style: form
+          schema:
+            type: integer
+            format: int32
+        - name: size
+          in: query
+          required: true
+          style: form
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: Success
+          content:
+            text/plain:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CommentDto'
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CommentDto'
+            text/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CommentDto'
     post:
       tags:
         - Comments
-      summary: Creates a reply to comment with the specified ID.
+      summary: Creates a reply to the comment with the specified ID.
       parameters:
-        - name: targetCommentId
+        - name: parentCommentId
           in: path
           required: true
           style: simple
